--- a/docs/thesis/glossary.tex
+++ b/docs/thesis/glossary.tex
@@ -46,3 +46,14 @@
 \newglossaryentry{path}{name={path},description={A path or route is a set of edges, or nodes from one source node to another. The shortest path between node $a$ and $b$ is usually denoted $\sigma_{ab}$}}
 
 \newglossaryentry{UTXO}{name={UTXO},description={Unspent Transaction Output, is an output from a Bitcoin transaction that has not been spent yet. It is sometimes referred to as simply output, although output is strictly broader}}
+
+\newglossaryentry{RSMC}{name={RSMC},description={Revocable Sequence Maturity Contracts, A bitcoin output with two spendable paths. One of the paths have a delay, a revocation window, to give the the counterparty time to spend the output if the broadcast was in violation}}
+
+\newglossaryentry{BRT}{name={BRT},description={Breach Remedy Transaction, A bitcoin transaction spending a fautly RSMC broadcast}}
+
+\newglossaryentry{commitment transaction}{name={Commitment Transaction},description={, A bitcoin transaction declaring the latest balance between two parties}}
+
+\newglossaryentry{HTLC}{name={HTLC},description={Hash Time Lock Contract, A bitcoin output spendable by a party disclosing a proof of a payment during a designated time window}}
+
+
+
