--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -32,17 +32,17 @@ It may be useful to view the fee market as existing under normal free market pre
 		\hspace*{2mm} 	
 \end{figure}
 
-Consider Figure \ref{fig:equilibrium}. The demand curve DD' signifies users demand to utilize a shortest \gls{path} in the lightning network and the supply curve the existing competing paths between s and d. Say there exists an equilibrium point E by with the market price will move towards. Suppose the average fee price is greater than equilibrium at $F_{1}$ with demand $F_{1}D_{1}$ and supply $F_{1}S_{2}$, and more operators would open a path between s and d driving the curve fee towards E. If it instead lay under the equilibrium at $F_2$ their would be an excess supply $F_{2}S_{1}$ and low demand $F_{2}D_{2}$, making operators loose money by having liquidity locked up on a path not used. Thus leading operators to close channels between s and d, again driving the fee towards E.
+Consider Figure \ref{fig:equilibrium}. The demand curve DD' signifies users demand to utilize a shortest \gls{path} in the lightning network and the supply curve the existing competing paths between s and d. Say there exists an equilibrium point E by with the market price will move towards. Suppose the average fee price is greater than equilibrium at $F_{1}$ with demand $F_{1}D_{1}$ and supply $F_{1}S_{2}$, and more operators would open a path between s and d driving the curve fee towards E. If it instead lay under the equilibrium at $F_2$ there would be an excess supply $F_{2}S_{1}$ and low demand $F_{2}D_{2}$, making operators loose money by having liquidity locked up on a path not used. Thus leading operators to close channels between s and d, again driving the fee towards E.
 
 The fee market may also be seen in its aggregate, where the axis represents the whole network. Here the drivers might be seen as new routing \gls{node}s joining if its a profitable venture or leaving if its a unprofitable one. Here again driving prices towards equilibrium. 
 
-It may be unusual to view demand through the usage of its medium, their is of course a dimension here between payment systems. But there's also a the possibility of streamable payments where the say one's rent might be paid hourly or a documentary per second dependent on the fee price. With a decreased fee these payments becomes more viable driving demand.
+It may be unusual to view demand through the usage of its medium, there is of course a dimension here between payment systems. But there’s also the possibility of streamable payments where one’s rent might be paid either hourly or per second dependent on the fee price. With a decreased fee these payments become more viable driving demand.
 
 The cost of procuring a shortest \gls{path} between $s$ and $d$ might not be equal for two different routing nodes dependent on already existing paths and set strategies. The viability of a strategy is in essence determined in its ability to be included in shortest paths between nodes and still procuring sufficient high fees.
 
 \section{Fee floor}
 
-The fee price, assuming rational actors, can only fall to a level where the operators are able to sustain their operation. The fees received must compensate for the \textit{time-value-of-money}, the security risk of having liquidity on a connected public \gls{node} and the operational cost of running and managing the software. Bhatia has proposed a standardized reference rate as Lightning Network Reference Rate(LNRR) similar to LIBOR\footnote{London Interbank Offered Rate.}, OIS\footnote{Overnight indexed swap.} and SOFR\footnote{Secured Overnight Financing Rate.}~\cite{bhatia:time:value}. Operational cost isn't included in LNRR as with managed funds a  operational fee is removed after the returns are calculated. The competition of fees drives down the price until a certain point, a floor, where there is better returns elsewhere. Therefor a the fee has a floor at
+The fee price, assuming rational actors, can only fall to a level where the operators are able to sustain their operation. The fees received must compensate for the \textit{time-value-of-money}, the security risk of having liquidity on a connected public \gls{node} and the operational cost of running and managing the software. Bhatia has proposed a standardized reference rate as Lightning Network Reference Rate(LNRR) similar to LIBOR\footnote{London Interbank Offered Rate.}, OIS\footnote{Overnight indexed swap.} and SOFR\footnote{Secured Overnight Financing Rate.}~\cite{bhatia:time:value}. Operational cost isn't included in LNRR, as with managed funds an operational fee is removed after the returns are calculated. The competition of fees drives down the price until a certain point, a floor, where there is better returns elsewhere. Therefor the fee has a floor at
 
 \[ F_{floor} = C_{op} + C_{risk-prem} + C_{risk-free-rent} \]
 
@@ -52,7 +52,7 @@ Note that the operational costs are independent of liquidity while the security 
 
 Operating a routing node requires the keys to be "hot", i.e. to be active and used on a live system. This carries a risk, especially considering that the capacity is willingly broadcast, creating a honey pot for attackers. The pseudo-anonymous architecture leaves little to no legal reproach and the bitcoin is most likely gone forever.
 
-As theft seldom happens it's not obvious how it should be account for. It is essentially a Credit Event, e.g Bankruptcy. Credit Default Swaps (CDS) is type of  insurance where the seller pays the buyer in case the Credit Event takes place. The buyer in turn pays a premium, usually monthly. If such an instrument were created, the routing node could buy protection and account the monthly premium as the risk cost. 
+As theft seldom happens it's not obvious how it should be accounted for. It is essentially a Credit Event, e.g Bankruptcy. Credit Default Swaps (CDS) is type of  insurance where the seller pays the buyer in case the Credit Event takes place. The buyer in turn pays a premium, usually monthly. If such an instrument was created, the routing node could buy protection and account the monthly premium as the risk cost. 
 
 \subsection{Time value of money}
 
@@ -64,7 +64,7 @@ The operational cost, i.e. electricity and the human labor needed to operate the
 
 \section{Routing strategies under Game Theory}
 
-There are clearly marked dynamics at play here. Node operator have many different options at their disposal and although all actors may not be rational their behavior should approximate the behavior of maximizing profit. This phenomena has many names, e.g. in economic theory optional behaviors is sometimes refereed to exist along an \textit{agenda field} and the iterable process of finding the maxima as climbing the \textit{maximand hill} where an equilibrium lay at the top~\cite{boulding:evolutionary:economy}. Further each actor's profit depends on every other actor's behavior reasonable to regard it as a game theoretic problem. More exactly it resembles a subset of game theory similar to that of biological ecosystems first studied by W. D. Hamilton~\cite{hamilton:behavior} and later expanded to a rigorous framework by J.M Smith et al.~\cite{smith:price:logic:animal, smith:evolution:games} as Evolutionary Game Theory(EGT).
+There are clearly marked dynamics at play here. Node operators have many different options at their disposal and although all actors may not be rational their behavior should approximate the behavior of maximizing profit. This phenomena has many names, e.g. in economic theory optional behaviors is sometimes refereed to exist along an \textit{agenda field} and the iterable process of finding the maxima as climbing the \textit{maximand hill} where an equilibrium lay at the top~\cite{boulding:evolutionary:economy}. Further each actor's profit depends on every other actor's behavior reasonable to regard it as a game theoretic problem. More exactly it resembles a subset of game theory similar to that of biological ecosystems first studied by W. D. Hamilton~\cite{hamilton:behavior} and later expanded to a rigorous framework by J.M Smith et al.~\cite{smith:price:logic:animal, smith:evolution:games} as Evolutionary Game Theory(EGT).
 
 In an ecosystem, species survival and propagation in the gene-pool depends on its behavior relative to the population. An aggressive animal may do very well in competition for feed in a population of mostly coy animals. However against a population of mostly aggressive beings it may have to fight most encounters and end up wounded leading to a coy behavior to be preferred. Unsuccessful individuals die off and are removed from the population and subsequently successful individuals prosper and it's genes increases in the population. In game theory a Nash equilibrium is a state in which no actor can change strategy and receive a strictly higher payoff~\cite{nash:equilibrium}. In EGT this notion is slightly modified and named Evolutionary Stably Strategy(ESS) which disallows for an actor to change strategy and receive an equal payoff as that would allow for the population to constantly drift between those two strategies. 
 
