--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -87,7 +87,7 @@ Most forks are insignificant. However SegWit2x carry some historical weight. Seg
 
 \section{Removing or reducing decentralization}
 
-Many other crytocurrency systems, which are seen as competing, have reduced decentralization in order to increase throughput. Some may not even be considered \textit{peer-to-peer} but instead rely on a traditional \textit{client-server} architecture which current financial systems are already using. These system easily scale. Most however use some sort of combination of increased block limit and/or some level of trusted \gls{node}s akin to \textit{oracles}.  
+Many other cryptocurrency systems, which are seen as competing, have reduced decentralization in order to increase throughput. Some may not even be considered \textit{peer-to-peer} but instead rely on a traditional \textit{client-server} architecture which current financial systems are already using. These system easily scale. Most however use some sort of combination of increased block limit and/or some level of trusted \gls{node}s akin to \textit{oracles}.  
 
 \section{Sidechains}
 
